# help-base

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2ae0792c0c24_initial_schema.py
src/helpbase/: __init__.py  app.py  config.py  database.py  dependencies.py
src/helpbase/models/: __init__.py  analytics.py  article.py  base.py  category.py  helpcenter.py  user.py
src/helpbase/routers/: __init__.py  analytics.py  articles.py  auth.py  dashboard.py  help_centers.py  public.py  widget.py
src/helpbase/schemas/: auth.py
src/helpbase/services/: analytics.py  article.py  auth.py  category.py  helpcenter.py  search.py
src/helpbase/templates/: landing.html
src/helpbase/templates/auth/: login.html  register.html
src/helpbase/templates/dashboard/: index.html
src/helpbase/templates/dashboard/help_centers/: analytics.html  detail.html  edit.html  new.html  widget.html
src/helpbase/templates/dashboard/help_centers/articles/: detail.html  edit.html  list.html  new.html
src/helpbase/templates/dashboard/help_centers/categories/: edit.html  new.html
src/helpbase/templates/layouts/: base.html  dashboard.html
src/helpbase/templates/public/: 404.html  article.html  base.html  category.html  home.html  search.html
tests/: conftest.py  test_articles.py  test_auth.py  test_categories.py  test_health.py  test_help_centers.py  test_models.py  test_public.py  test_widget.py
